Aligned search bar with chart leftborder and correct responsiveness. Fixed company headquarter data stat text overlap.

--- a/src/App.css
+++ b/src/App.css
@@ -162,46 +162,7 @@ h2 {
   font-size: calc(10px + 2vmin);
 }
 
-
-* {
-  box-sizing: border-box; 
- }
- body {
-   margin: 0;
- }
- #main {
-   display: flex;
-   min-height: calc(100vh - 40vh);
- }
- #main > article {
-   flex: 1;
- }
- #main > nav, 
- #main > aside {
-   flex: 0 0 20vw;
-   background: beige;
- }
- #main > nav {
-   order: -1;
- }
- header, footer, article, nav, aside {
-   padding: 1em;
- }
- header, footer {
-   background: yellowgreen;
-   height: 20vh;
- }
-
- .gutter-box {
-  padding: 8px 0;
-  background: #ffffff;
-}
-
-
-#custom-templates .empty-message {
-  padding: 5px 10px;
-  text-align: center;
-}
+/*  */
 
 
 
@@ -219,26 +180,31 @@ h2 {
 
 /* search bar css */
 .form {
-  display: flex;
+  display: inline-block;
   flex-direction: row;
 }
+
 .search-field {
   width: 400px;
   padding: 10px 15px 10px 45px;
   border-radius: 5px;
   outline-color: rgb(5, 209, 15);
   border: 1px solid #000000;
-  margin-left: -390px;
+  display: inline-block;
+  margin-right: 278px;
 }
 
 .search-button {
   background: transparent;
   border: none;
   outline: none;
-  margin-left: -390px;
+  display: inline-block;
+  margin-top: 9px;
+  position: absolute;
 }
 
 .search-button img {
+  margin-left: 8px;
   width: 20px;
   height: 20px;
   object-fit: cover;
